--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+clap = { version = "4.5.31", features = ["derive"] }
 netdev = "0.32.0"
 pnet = "0.35.0"
 pnet_datalink = "0.35.0"
